--- a/05_Spring/spring/src/main/resources/application.properties
+++ b/05_Spring/spring/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 spring.application.name=spring
 
-server.port=8002
+server.port=8001
 
+#JSP
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#Oracle Database 연결 설정
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=c##jsp
+spring.datasource.password=JSP
+
+#mybatis
+mybatis.mapper-locations=mappers/*.xml
+mybatis.configuration.jdbc-type-for-null=varchar
+mybatis.type-aliases-package=com.kh.spring.model.vo
+
