--- a/07_RestServer/board/src/main/resources/application.yaml
+++ b/07_RestServer/board/src/main/resources/application.yaml
@@ -2,21 +2,21 @@ spring:
   application:
     name: board
 
-    datasource:
-      hikari:
-        jdbc-url: jdbc:h2:tcp//localhost/C:\workspace\07_RestServer\H2DB\TestDB
-        driver-class-name: org.h2.Driver
-        username: sa
-        password: 1234
-      h2:
-        console:
-          enabled: true
-          path: /h2-console
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:tcp://localhost/C:\workspace\07_RestServer\H2DB\TestDB
+      driver-class-name: org.h2.Driver
+      username: sa
+      password: 1234
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
-      servlet:
-        multipart:
-          max-file-size: 10MB
-          max-request-size: 50MB
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
 
 server:
   port: 8888
@@ -29,4 +29,4 @@ server:
 
 mybatis:
   type-aliases-package: com.kh.board.entity
-  mapper-locations: mapper/*.xml
+  mapper-locations: mappers/*.xml
