--- a/07_RestServer/jpa/src/main/resources/application.yaml
+++ b/07_RestServer/jpa/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     show-sql: true
     properties:
       hibernate:
